--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "license": "Apache-2",
     "private": false,
     "devDependencies": {
+        "@vendure/common": "^1.3.2",
+        "@vendure/core": "^1.3.2",
         "tslint": "^5.12.1",
         "typescript": "^3.3.3"
     },
     "files": [
         "lib/**/*"
-    ]
+    ],
+    "dependencies": {
+        "@agoransson/klarna-payments": "^1.0.6"
+    }
 }
