--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@agoransson/vendure-klarna-plugin",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "Plugin that enabled Klarna payment for Vendure ecommerce.",
     "main": "lib/index.ts",
     "types": "lib/index.d.ts",
@@ -16,8 +16,8 @@
         "prepublishOnly": "yarn run build",
         "lint:fix": "eslint ./src/**/*.ts --fix"
     },
-    "author": "Andreas Goransson <andreasgoransson0@gmail.com>",
-    "license": "Apache-2",
+    "author": "Andreas Göransson (http://github.com/agoransson)",
+    "license": "Apache-2.0",
     "private": false,
     "devDependencies": {
         "@vendure/common": "^1.3.2",
@@ -30,5 +30,8 @@
     ],
     "dependencies": {
         "@agoransson/klarna-payments": "^1.0.6"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
