--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "@agoransson/vendure-klarna-plugin",
-    "version": "0.0.10",
+    "version": "0.0.11",
     "description": "Plugin that enabled Klarna payment for Vendure ecommerce.",
-    "main": "dist/index.ts",
+    "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "repository": {
         "type": "git",
